tests/expectations/compiler/integers/u16/max_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372008]: The value 65536 is not a valid `u16`
    --> compiler-test:5:22
     |
   5 |         let a: u16 = 65536u16;
     |                      ^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
